Actualización de home.html

--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
                     <a class="nav-link" href="estudiante/infest.php">Estudiante</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="consulta/consulta.html">Consulta</a>
+                    <a class="nav-link" href="consulta/consulta.html">Consulta alumno</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="consulta/desercion.php">Deserción</a>
